--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <meta name="description" content="This is Aaron Sanchez's Portfolio.">
     <meta name="author" content="Aaron Sanchez">
     <meta name="keywords" content="portfolio, website, front-end, back-end">
+    <!--This is the font code for Crimson Text-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
     <!--CSS for the index.html file-->
-    <link rel="stylesheet" href="./assets/reset.css"/>
-    <link rel="stylesheet" href="./assets/style.css"/>
+    <link rel="stylesheet" href="./assets/css/reset.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>Aaron Sanchez</title>
 </head>
 
@@ -38,7 +42,7 @@
         
         <section id="about" class="about">
             <img src="./assets/images/profile-picture.jpg" alt="Picture of Aaron Sanchez" class="profile-picture">
-            <!--This is the html code for the vertical line, created with CSS border properties-->
+            <!--This is the html code for the vertical line, created with ::before pseudo-element-->
             <div class="vertical-line"></div>
             <div class="about-right">
                 <h2 class="about-me">About Me</h2>
