--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
     <footer>
         <div id="contact" class="contact">
             <ul class="footer-contact">
-                <li><strong>Contact Me:</strong></li>
-                <li class="email">aaron.ross.sanchez@gmail.com</li>
-                <li class="github"><a href="https://github.com/aaron-ross-sanchez/" class="github-link">GitHub</a></li>
-                <li class="linkedin"><a href="" class="linkedin-link">LinkedIn</a></li>
+                <li class="footer-item"><strong>Contact Me:</strong></li>
+                <li class="footer-item email">aaron.ross.sanchez@gmail.com</li>
+                <li class="footer-item github"><a href="https://github.com/aaron-ross-sanchez/" class="github-link">GitHub</a></li>
+                <li class="footer-item linkedin"><a href="" class="linkedin-link">LinkedIn</a></li>
             </ul>
         </div>
     </footer>
