--- a/placeholder.html
+++ b/placeholder.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is a placeholder page.">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/placeholder.css"></link>
     <title>Placeholder</title>
 </head>
@@ -22,7 +23,11 @@
         <div class="full-width-rectangle"></div>
         <div class="accent-one-header"></div>
         <div class="accent-two-header"></div>
+        <div class="accent-three-header"></div>
     </article>
 
+    <main>
+        <div class="info">Page Coming Soon!</div>
+    </main>
 </body>
 </html>
