--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="nav-about"><a href="#about" class="nav-link">About</a></li>
                 <li class="nav-portfolio"><a href="#portfolio" class="nav-link">Portfolio</a></li>
                 <li class="nav-contact"><a href="#contact" class="nav-link">Contact</a></li>
-                <li class="nav-resume"><a href="#" class="nav-link">Resume</a></li>
+                <li class="nav-resume"><a href="./placeholder.html" class="nav-link">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -133,7 +133,7 @@
                 <li class="footer-item"><strong>Contact Me:</strong></li>
                 <li class="footer-item email">aaron.ross.sanchez@gmail.com</li>
                 <li class="footer-item github"><a href="https://github.com/aaron-ross-sanchez/" class="github-link">GitHub</a></li>
-                <li class="footer-item linkedin"><a href="" class="linkedin-link">LinkedIn</a></li>
+                <li class="footer-item linkedin"><a href="./pl" class="linkedin-link">LinkedIn</a></li>
             </ul>
         </div>
     </footer>
