--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
     <!--CSS for the index.html file-->
     <link rel="stylesheet" href="./assets/css/reset.css"/>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <!-- <link rel="stylesheet" href="./assets/css/style.css"/> -->
     <title>Aaron Sanchez</title>
 </head>
 
