project.html template

--- a/project-5.html
+++ b/project-5.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="This is the Horiseon Refactor project.">
+    <!--This is the font code for Crimson Text-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+    <!--CSS for the index.html file-->
+    <!-- <link rel="stylesheet" href="./assets/css/reset.css"/> -->
+    <link rel="stylesheet" href="./assets/css/project.css"/>
+    <title>Project 5</title>
 </head>
+
 <body>
     
+    <header class="header">
+        <nav>
+            <ul class="nav-bar">
+                <li class="nav-home"><a href="./index.html" class="nav-link">Home</a></li>
+                <li class="nav-project"><a href="./index.html#portfolio" class="nav-link">Portfolio</a></li>            
+            </ul>
+        </nav>
+    </header>
+
+    <article class="header-design">
+        <div class="full-width-rectangle"></div>
+        <div class="accent-one-header"></div>
+        <div class="accent-two-header"></div>
+        <div class="accent-three-header"></div>
+    </article>
+
+    <main class="content">
+
+        <section id="project-name" class="project-name content-item">
+            <div class="name"><h2>Project Name</h2></div>
+            <div class="horizontal-line"></div>
+            <div class="description">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut venenatis tellus in metus vulputate eu scelerisque felis. Aliquet porttitor lacus luctus accumsan tortor. Eu volutpat odio facilisis mauris sit amet massa vitae tortor. Vestibulum lorem sed risus ultricies tristique nulla aliquet. In fermentum posuere urna nec.</div>
+            <div class="repo"><a href="#" class="repo-link">GitHub Repository</a></div>
+            <div class="deployment"><a href="#" class="deployment-link">Project Deployment</a></div>
+            <div class="languages">Languages:</div>
+            <div class="horizontal-line"></div>
+        </section>
+
+        <section id="project-breakdown" class="project-breakdown content-item">
+            <div class="breakdown"><h2>Project Breakdown</h2></div>
+            <div class="information">
+                <p>In this area, I'll talk about key topics that you went over and how you accomplished that in code. Include code examples. This is an informative section to show that I actually know these skills</p>
+            </div>
+        </section>
+        
+
+    </main>
 </body>
 </html>
