project.html navbar update

--- a/project-3.html
+++ b/project-3.html
@@ -11,7 +11,7 @@
     <!--CSS for the index.html file-->
     <!-- <link rel="stylesheet" href="./assets/css/reset.css"/> -->
     <link rel="stylesheet" href="./assets/css/project.css"/>
-    <title>Project 3</title>
+    <title>Study Guide</title>
 </head>
 
 <body>
@@ -19,8 +19,21 @@
     <header class="header">
         <nav>
             <ul class="nav-bar">
+                <div class="dropdown">
+                    <li class="nav-projects">Projects
+                        <i class="fa fa-caret-down"></i>
+                    </li>
+                    <div class="dropdown-content">
+                        <a href="./project-1.html">Professional Portfolio</a>
+                        <a href="./project-2.html">Horiseon Refactor</a>
+                        <a href="./project-3.html">Study Guide</a>
+                        <a href="./project-4.html">Project 4</a>
+                        <a href="./project-5.html">Project 5</a>
+                    </div>
+                </div>
                 <li class="nav-home"><a href="./index.html" class="nav-link">Home</a></li>
-                <li class="nav-project"><a href="./index.html#portfolio" class="nav-link">Portfolio</a></li>            
+
+                <!-- <li class="nav-project"><a href="./index.html#portfolio" class="nav-link">Portfolio</a></li> -->
             </ul>
         </nav>
     </header>
