--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <!--This anchor tag links the html page of the first project to the class project-link.-->
                     <a href="./project-1.html" class="project-link">
                         <div class="primary-image-hover">
-                            <div class="primary-image-text">Project 1</div>
-                            <div class="primary-image-subtext"><strong class="bold">Languages:</strong> <br> <br><strong class="bold">Description:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus in hac habitasse platea dictumst quisque sagittis purus sit.</div>
+                            <div class="primary-image-text">Professional Portfolio</div>
+                            <div class="primary-image-subtext"><strong class="bold">Languages:</strong> HTML, CSS, and Git<br> <br><strong class="bold">Description:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus in hac habitasse platea dictumst quisque sagittis purus sit.</div>
                         </div>
                     </a>
                 </div>
@@ -80,8 +80,8 @@
                     <img src="./assets/images/Project 2.jpg" alt="Project 2" class="secondary-project">
                     <a href="./project-2.html" class="project-link">
                         <div class="secondary-image-hover">
-                            <div class="secondary-image-text">Project 2</div>
-                            <div class="secondary-image-subtext"><strong class="bold">Languages:</strong></div>
+                            <div class="secondary-image-text">Horiseon Refactor</div>
+                            <div class="secondary-image-subtext"><strong class="bold">Languages:</strong> HTML, CSS, and Git</div>
                         </div>
                     </a>
                 </div>
@@ -90,8 +90,8 @@
                     <img src="./assets/images/Project 3.jpg" alt="Project 3" class="third-project">
                     <a href="./project-3.html" class="project-link">
                         <div class="third-image-hover">
-                            <div class="third-image-text">Project 3</div>
-                            <div class="third-image-subtext"><strong class="bold">Languages:</strong></div>
+                            <div class="third-image-text">Study Guide</div>
+                            <div class="third-image-subtext"><strong class="bold">Languages:</strong> HTML, CSS, JavaScript, and Git</div>
                         </div>
                     </a>
                 </div>
@@ -101,7 +101,7 @@
                     <a href="./project-4.html" class="project-link">
                         <div class="fourth-image-hover">
                             <div class="fourth-image-text">Project 4</div>
-                            <div class="fourth-image-subtext"><strong class="bold">Languages:</strong></div>
+                            <div class="fourth-image-subtext"><strong class="bold">tbd</strong></div>
                         </div>
                     </a>
                 </div>
@@ -111,7 +111,7 @@
                     <a href="./project-5.html" class="project-link">
                         <div class="fifth-image-hover">
                             <div class="fifth-image-text">Project 5</div>
-                            <div class="fifth-image-subtext"><strong class="bold">Languages:</strong></div>
+                            <div class="fifth-image-subtext"><strong class="bold">tbd</strong></div>
                         </div>
                     </a>
                 </div>
@@ -133,7 +133,7 @@
                 <li class="footer-item"><strong>Contact Me:</strong></li>
                 <li class="footer-item email">aaron.ross.sanchez@gmail.com</li>
                 <li class="footer-item github"><a href="https://github.com/aaron-ross-sanchez/" class="github-link">GitHub</a></li>
-                <li class="footer-item linkedin"><a href="./pl" class="linkedin-link">LinkedIn</a></li>
+                <li class="footer-item linkedin"><a href="./placeholder.html" class="linkedin-link">LinkedIn</a></li>
             </ul>
         </div>
     </footer>
