--- a/project-1.html
+++ b/project-1.html
@@ -48,20 +48,19 @@
     <main class="content">
 
         <section id="project-name" class="project-name content-item">
-            <div class="name"><h2>Project Name</h2></div>
+            <div class="name"><h2>Professional Portfolio</h2></div>
             <div class="horizontal-line"></div>
-            <div class="description">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut venenatis tellus in metus vulputate eu scelerisque felis. Aliquet porttitor lacus luctus accumsan tortor. Eu volutpat odio facilisis mauris sit amet massa vitae tortor. Vestibulum lorem sed risus ultricies tristique nulla aliquet. In fermentum posuere urna nec.</div>
-            <div class="repo"><a href="#" class="repo-link">GitHub Repository</a></div>
+            <div class="description">Description: As part of the UT EdX Bootcamp module 2 challenge, I coded from scratch a professional portfolio site with about me, portfolio, and contact sections.</div>
+            <div class="repo"><a href="https://github.com/aaron-ross-sanchez/professional-portfolio.git" class="repo-link">GitHub Repository</a></div>
             <div class="deployment"><a href="#" class="deployment-link">Project Deployment</a></div>
-            <div class="languages">Languages:</div>
+            <div class="languages">Languages: HTML, CSS, and Git</div>
             <div class="horizontal-line"></div>
         </section>
 
         <section id="project-breakdown" class="project-breakdown content-item">
             <div class="breakdown"><h2>Project Breakdown</h2></div>
             <div class="information">
-                <p>In this area, I'll talk about key topics that you went over and how you accomplished that in code. Include code examples. This is an informative section to show that I actually know these skills</p>
-            </div>
+                <p>Coming Soon!<br>In this area, I'll talk about key topics that I went over and how I accomplished that in code. I'll include code examples. This is an informative section to show that I actually know these skills.</p>            </div>
         </section>
         
 
