--- a/project-4.html
+++ b/project-4.html
@@ -48,7 +48,7 @@
     <main class="content">
 
         <section id="project-name" class="project-name content-item">
-            <div class="name"><h2>Project Name</h2></div>
+            <div class="name"><h2>Coming Soon!</h2></div>
             <div class="horizontal-line"></div>
             <div class="description">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut venenatis tellus in metus vulputate eu scelerisque felis. Aliquet porttitor lacus luctus accumsan tortor. Eu volutpat odio facilisis mauris sit amet massa vitae tortor. Vestibulum lorem sed risus ultricies tristique nulla aliquet. In fermentum posuere urna nec.</div>
             <div class="repo"><a href="#" class="repo-link">GitHub Repository</a></div>
@@ -60,8 +60,7 @@
         <section id="project-breakdown" class="project-breakdown content-item">
             <div class="breakdown"><h2>Project Breakdown</h2></div>
             <div class="information">
-                <p>In this area, I'll talk about key topics that you went over and how you accomplished that in code. Include code examples. This is an informative section to show that I actually know these skills</p>
-            </div>
+                <p>Coming Soon!<br>In this area, I'll talk about key topics that I went over and how I accomplished that in code. I'll include code examples. This is an informative section to show that I actually know these skills.</p>            </div>
         </section>
         
 
