--- a/project-1.html
+++ b/project-1.html
@@ -52,7 +52,7 @@
             <div class="horizontal-line"></div>
             <div class="description">Description: As part of the UT EdX Bootcamp module 2 challenge, I coded from scratch a professional portfolio site with about me, portfolio, and contact sections.</div>
             <div class="repo"><a href="https://github.com/aaron-ross-sanchez/professional-portfolio.git" class="repo-link">GitHub Repository</a></div>
-            <div class="deployment"><a href="#" class="deployment-link">Project Deployment</a></div>
+            <div class="deployment"><a href="https://aaron-ross-sanchez.github.io/professional-portfolio/" class="deployment-link">Project Deployment</a></div>
             <div class="languages">Languages: HTML, CSS, and Git</div>
             <div class="horizontal-line"></div>
         </section>
