--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <header class="header">
         <nav>
             <ul class="nav-bar">
+                <li class="nav-name"><strong>Aaron Sanchez</strong></li>
                 <li class="nav-about"><a href="#about" class="nav-link">About</a></li>
                 <li class="nav-portfolio"><a href="#portfolio" class="nav-link">Portfolio</a></li>
                 <li class="nav-contact"><a href="#contact" class="nav-link">Contact</a></li>
